--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@eslint/js": "^9.19.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
