--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.18.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet-async": "^2.0.5",
     "styled-components": "^6.1.15",
     "vite-plugin-static-copy": "^2.2.0"
