--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -22,7 +24,8 @@
     "react-ga": "^3.3.1",
     "react-helmet-async": "^2.0.5",
     "styled-components": "^6.1.15",
-    "vite-plugin-static-copy": "^2.2.0"
+    "vite-plugin-static-copy": "^2.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.25.9",
