--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
+    "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.15",
     "vite-plugin-static-copy": "^2.2.0",
     "yup": "^1.6.1"
@@ -33,11 +36,14 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
