Refactor codebase to nextjs

--- a/package.json
+++ b/package.json
@@ -1,51 +1,36 @@
 {
-  "name": "-antonioarcher",
+  "name": "my-app",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@google/generative-ai": "^0.21.0",
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
+    "@types/styled-components": "^5.1.34",
+    "emailjs": "^4.0.3",
     "formik": "^2.4.6",
-    "framer-motion": "^11.18.2",
+    "fortawesome": "^0.0.1-security",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
-    "path": "^0.12.7",
+    "next": "15.1.7",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^7.1.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "styled-components": "^6.1.15",
-    "vite-plugin-static-copy": "^2.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "dotenv-webpack": "^8.1.0",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.4",
+    "@types/react": "19.0.10",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7"
   }
 }
