Update to create backend

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "-antonioarcher",
+  "name": "antonioarcher",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
+    "client": "vite",
     "build": "vite build",
+    "server": "node server.js",
+    "start": "npm run build && npm run server",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -15,10 +17,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.475.0",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -36,6 +41,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^8.2.0",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
