--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.475.0",
     "path": "^0.12.7",
+    "pdf.js": "^0.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
